RF finished, FAVAE baseline added

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,12 @@ data/IR
 data/MALDI
 data/*.xlsx
 
+# Results because models are too heavy for github
+./results
+
 # Logs
 /logs
 /wandb
 /__pycache__
+results/RandomForest_noalignment.pickle
+results/sshiba_reg_noalignment.pickle
