--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@ data/*.xlsx
 
 # Results because models are too heavy for github
 /results/
+/testdata/
 
 # Logs
 /logs/
 /wandb/
 /__pycache__
-results/sshiba_reg_noalignment.pickle
-results/RandomForest_noalignment.pickle
+data/test/
