--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,11 @@ dev/cloverdata
 # Logs
 /logs/
 dev/wandb/
-/__pycache__
+__pycache__
 data/test/
 /checkpoints/
 /wandb/
 /old/
-/favae/__pycache__/
 
 /results_paper/
 
